--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
- 
  * {
      margin: 0;
      padding: 0;
@@ -13,25 +12,35 @@
      display: flex;
      justify-content: center;
      align-items: center;
+     
  }
  
  div {
      background-color: #1F1F1F;
      color: White;
      width: 384px;
+     text-align: center;
+     border-radius: 30px;
+     padding: 3%
+ 
  }
  ul, li {
      list-style: none;
  }
+ 
  img{
-    width: 140px;
-    margin: auto;
-    display: block;
-    border-radius: 5px;
-}
-h1{
-    text-align: center;
-}
-p{
-    text-align: center;
-}
+     width: 88px;
+     margin: auto;
+     display: block;
+     border-radius: 120px;
+ }
+ h1{
+     text-align: center;
+ }
+ p{
+     text-align: center;
+ }
+ strong{
+     color: greenyellow;
+ }
+ 
