--- a/style.css
+++ b/style.css
@@ -1,46 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
- * {
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
-     font-family: "Inter", sans-serif
- }
- body {
-     background-color: #141414;
-     height: 100vh;
  
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     
- }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif
+}
+    :root {
+        --black: #141414;
+        --dark_gray: #1F1F1F;
+        --white: #fff;
+        --neon-green: #C4F82A;
+        --grey: #333;
+    }
+body {
+    background-color: var(--black);
+}
  
- div {
-     background-color: #1F1F1F;
-     color: White;
-     width: 384px;
-     text-align: center;
-     border-radius: 30px;
-     padding: 3%
- 
- }
- ul, li {
-     list-style: none;
- }
- 
- img{
-     width: 88px;
-     margin: auto;
-     display: block;
-     border-radius: 120px;
- }
- h1{
-     text-align: center;
- }
- p{
-     text-align: center;
- }
- strong{
-     color: greenyellow;
- }
- 
+div {
+    background-color: var(--dark_gray);
+    color: var(--white);
+    width: 384px;
+    text-align: center;
+    border-radius: 12px;
+    padding: 40px;
+
+}
+ul, li {
+    list-style: none;
+}
+
+img{
+    width: 88px;
+    border-radius: 50%;
+    margin-bottom: 24px;
+
+}
+h1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 150%;
+    margin-bottom: 4px;
+}
+
+strong {
+    color: var(--neon-green);
+    font-size: 14px;
+
+}
+p {
+    margin-block: 24px;
+    font-size: 14px;
+}
+a {
+    display: block;
+    background-color: var(--grey);
+    margin-bottom: 16px;
+    color: var(--white);
+    text-decoration: none;
+    padding: 12px;
+    font-weight: 700;
+    font-size: 14px;
+    border-radius: 8px;
+    
+}
+a:hover{
+    background-color: var(--neon-green);
+    color: var(--grey);
+    transition: 0.6s;
+}
