--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     }
 body {
     background-color: var(--black);
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
  
 div {
